[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore left.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore right.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore up.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore walk down 1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore down.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore walk down 2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore walk left 1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore walk left 2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore swing left 1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore swing left 2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore swing left 3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore walk up 1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore walk up 2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore swing right 1.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore swing right 2.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore swing right 3.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore walk right 1.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Characters/Fiore/Fiore walk right 2.png" type="Texture" id=19]
[ext_resource path="res://Sounds/Footstep.wav" type="AudioStream" id=20]
[ext_resource path="res://Sounds/Swing.wav" type="AudioStream" id=21]



[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "walkdown",
"speed": 6.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 2 ) ],
"loop": true,
"name": "walkleft",
"speed": 6.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "swingleft",
"speed": 16.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 4 ), ExtResource( 14 ), ExtResource( 4 ) ],
"loop": true,
"name": "walkup",
"speed": 6.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "swingright",
"speed": 16.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 3 ), ExtResource( 19 ), ExtResource( 3 ) ],
"loop": true,
"name": "walkright",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 5, 4 )

[node name="Player" type="KinematicBody2D" index="0"]

position = Vector2( 94, 67 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( -25, -22 )
frames = SubResource( 1 )
animation = "down"
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 10 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="TimerSwing" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[node name="TimerSwingAnim" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="TimerDash" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="SoundFootstep" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 20 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="SoundSwing" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 21 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="TimerSwing" to="." method="_on_TimerSwing_timeout"]

[connection signal="timeout" from="TimerSwingAnim" to="." method="_on_TimerSwingAnim_timeout"]

[connection signal="timeout" from="TimerDash" to="." method="_on_TimerDash_timeout"]


